# man2html

./: .gitignore  Makefile  Makefile.OLD  Makefile.am  README  abbrev.c  cgibase.c  configure.ac  defs.h  hman.1  hman.sh  man2html.1  man2html.c  strdefs.c
locales/fr/: man2html.1
locales/it/: hman.1  man2html.1
manpages/it/: hman.1  man2html.1
patches/: 000-Makefile.in.patch  003-hman-browser.patch  005-paths.patch  010-aux-debian.patch  014-hman-sensible-browser.patch  015-hman-urlencode.patch  021-man2html-perl_modules.patch  022-man2html-it-manpage.patch  024-man2html-uncompress.patch  030-man2html-man-hyphens.patch  032-man2html-man-remove-LO-tags.patch  series
